--- a/p1/style.css
+++ b/p1/style.css
@@ -30,4 +30,15 @@ a:link{
     text-decoration: none;
 }
 
+.mark:hover{
+    text-shadow: 0px 2px 300px red;
+  filter: dropshadow(color=red, offx=2, offy=2);
+}
+
+.exclam:hover{
+    text-shadow: 0px 2px 300px red;
+    filter: dropshadow(color=red, offx=2, offy=2);
+}
+
+
 
