--- a/p1/style.css
+++ b/p1/style.css
@@ -1,3 +1,7 @@
+body{
+    cursor: url(./image/period.png), auto;
+  }
+
 #wrapper {
     display: flex;
     justify-content: center;
@@ -13,7 +17,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black;
 }
+
 
 h1 {
     font-family: "Pixelify Sans", sans-serif;
@@ -21,6 +27,15 @@ h1 {
     font-weight: 400;
     font-size: 6vw;
     text-align: center;
+    color: black;
+}
+
+#h1:hover{
+    color: red;
+}
+
+a:link{
+    text-decoration: none;
 }
 
 .blink{
@@ -31,10 +46,6 @@ h1 {
     0% { opacity: 0; }
     50% { opacity: 1; }
     100% { opacity: 0; }
-}
-
-#menu{
-    text-align:center;
 }
 
 h2{
