--- a/p1/style.css
+++ b/p1/style.css
@@ -20,6 +20,27 @@ body{
     color: black;
 }
 
+#box:hover{
+    cursor: url(./image/comma.png), auto;
+
+    box-shadow: 0px 2px 300px red;
+    animation: shake 0.5s;
+    animation-iteration-count: 0.5;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
 
 h1 {
     font-family: "Pixelify Sans", sans-serif;
@@ -48,6 +69,10 @@ a:link{
     100% { opacity: 0; }
 }
 
+#menu{
+    text-align: center;
+}
+
 h2{
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
@@ -55,7 +80,6 @@ h2{
     display: inline-block;
     text-align: left;
     color: black;
-
 }
 
 
