--- a/p1/selection/apostrophe/style.css
+++ b/p1/selection/apostrophe/style.css
@@ -1,7 +1,12 @@
-body{
+*{
+    cursor: url(../../image/period.png), auto;
+  }
+
+  body{
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
+    font-size: 1.5rem;
 }
 
 button{
