--- a/p1/selection/question/style.css
+++ b/p1/selection/question/style.css
@@ -1,12 +1,12 @@
 *{
-    cursor: url(../), auto;
+    cursor: url(../../image/period.png), auto;
   }
 
 body{
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.5rem;
 }
 
 h1{
