--- a/p1/selection/style.css
+++ b/p1/selection/style.css
@@ -2,14 +2,38 @@
     cursor: url(../image/period.png), auto;
   }
 
+h2{
+    font-family: "Pixelify Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-size: 1.5rem;
+    color: black;
+    border: 4px solid;
+    border-radius: 2vw;
+    padding: 15px;
+}
+
+.box{
+  display: flex;
+  width: 56%;
+  margin: auto;
+}
+
 h3{
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    font-size: 40vw;
+    font-size: 20vw;
     color: black;
-    line-height: 3px;
+    line-height: 1rem;
     text-align: center;
+}
+
+.uninteresting{
+  display: flex;
+  flex-direction: row;
+  gap: 15vw;
+  justify-content: center;
 }
 
 a:link{
