--- a/p1/selection/question/style.css
+++ b/p1/selection/question/style.css
@@ -15,10 +15,41 @@ h1{
     font-weight: 400;
     font-size: 40vw;
     color: black;
-    line-height: 3px;
+    line-height: 2px;
     text-align: center;
-  
+    margin-top: 20vw;
+    margin-bottom: 15vw;
 }
+
+.stats{
+    margin-left: 6vw;
+    line-height: 3px;
+}
+
+h3{
+    font-family: "Pixelify Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    
+}
+
+.bar1{
+    width: 100px;
+    height: 10px;
+    background-color: red;
+  }
+  
+.bar2{
+    width: 100px;
+    height: 10px;
+    background-color: red;
+ }
+
+.bar3{
+    width: 20px;
+    height: 10px;
+    background-color: red;
+ }
 
 p{
     border: 4px solid;
