--- a/p1/selection/question/style.css
+++ b/p1/selection/question/style.css
@@ -17,13 +17,38 @@ h1{
     color: black;
     line-height: 2px;
     text-align: center;
-    margin-top: 20vw;
-    margin-bottom: 15vw;
+    margin-top: 18vw;
+    margin-bottom: 20vw;
+    animation: flip 2s infinite alternate;
+}
+
+@keyframes flip {
+    0% {
+        transform: rotateY(180deg);
+    }
+    50% {
+        transform: rotateY(0deg);
+    }
+
+    70% {
+        transform: rotateY(0deg);
+    }
+    
+    100% {
+        transform: rotateY(0deg);
+    }
+}
+
+h2{
+    font-family: "Pixelify Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    text-align: center;
 }
 
 .stats{
-    margin-left: 6vw;
     line-height: 3px;
+    margin-left: 12vw;
 }
 
 h3{
@@ -34,19 +59,19 @@ h3{
 }
 
 .bar1{
-    width: 100px;
+    width: 60px;
     height: 10px;
     background-color: red;
   }
   
 .bar2{
-    width: 100px;
+    width: 20px;
     height: 10px;
     background-color: red;
  }
 
 .bar3{
-    width: 20px;
+    width: 40px;
     height: 10px;
     background-color: red;
  }
@@ -57,17 +82,21 @@ p{
     padding: 30px;
 }
 
+.red{
+    color: red;
+}
+
 .box{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 95%;
 
 }
 
 #grid{
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    padding-right: 3vw;
     
 }
 
@@ -75,7 +104,7 @@ button{
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    font-size: 60px;
+    font-size: 1em;
     color: red;
     border: none;
     background: none;
