--- a/p1/selection/colons/style.css
+++ b/p1/selection/colons/style.css
@@ -1,21 +1,94 @@
 *{
-    cursor: url(../../image/period.png), auto;
-  }
+  cursor: url(../../image/period.png), auto;
+}
 
-  body{
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-size: 1.5rem;
+body{
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 1.5rem;
+}
+
+h1{
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 40vw;
+  color: black;
+  line-height: 2px;
+  text-align: center;
+  margin-top: 18vw;
+  margin-bottom: 20vw;
+}
+
+h2{
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  text-align: center;
+}
+
+.stats{
+  line-height: 3px;
+  margin-left: 12vw;
+}
+
+h3{
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  
+}
+
+.bar1{
+  width: 60px;
+  height: 10px;
+  background-color: red;
+}
+
+.bar2{
+  width: 20px;
+  height: 10px;
+  background-color: red;
+}
+
+.bar3{
+  width: 40px;
+  height: 10px;
+  background-color: red;
+}
+
+p{
+  border: 4px solid;
+  border-radius: 4vw;
+  padding: 30px;
+}
+
+.red{
+  color: red;
+}
+
+.box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 95%;
+
+}
+
+#grid{
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  
 }
 
 button{
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-size: 60px;
-    color: red;
-    border: none;
-    background: none;
-    cursor: pointer;
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 1em;
+  color: red;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
