--- a/p1/interesting/style.css
+++ b/p1/interesting/style.css
@@ -2,7 +2,7 @@
     cursor: url(../image/period.png), auto;
   }
 
-h2{
+  h2{
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -11,12 +11,17 @@ h2{
     border: 4px solid;
     border-radius: 2vw;
     padding: 15px;
+    display: flex;
+  width: 56%;
+  margin: auto;
+    
 }
 
 .box{
-  display: flex;
-  width: 56%;
-  margin: auto;
+  
+  margin-top: 10vw;
+  margin-bottom: -8vw;
+
 }
 
 h3{
