--- a/p1/uninteresting/style.css
+++ b/p1/uninteresting/style.css
@@ -11,12 +11,17 @@ h2{
     border: 4px solid;
     border-radius: 2vw;
     padding: 15px;
+    display: flex;
+    width: 56%;
+    margin: auto;
+    
 }
 
 .box{
-  display: flex;
-  width: 56%;
-  margin: auto;
+  
+  margin-top: 10vw;
+  margin-bottom: -8vw;
+
 }
 
 h3{
@@ -28,7 +33,6 @@ h3{
     line-height: 1rem;
     text-align: center;
 }
-
 
 
 .uninteresting{
@@ -43,6 +47,10 @@ h3{
   flex-direction: row;
   gap: 15vw;
   justify-content: center;
+}
+
+.reveal{
+  color: red
 }
 
 a:link{
