--- a/p1/end/style.css
+++ b/p1/end/style.css
@@ -11,12 +11,10 @@ h2{
     border: 4px solid;
     border-radius: 2vw;
     padding: 15px;
-}
-
-.box{
-  display: flex;
-  width: 56%;
-  margin: auto;
+    display: flex;
+    width: 56%;
+    margin: auto;
+    margin-top: 10vw;
 }
 
 a:link{
