--- a/p1/interesting/colons/style.css
+++ b/p1/interesting/colons/style.css
@@ -62,6 +62,9 @@ p{
   border: 4px solid;
   border-radius: 4vw;
   padding: 30px;
+  overflow: scroll;
+  height: 75vh;
+  scrollbar-color: red;
 }
 
 .red{
