--- a/p1/interesting/comma/style.css
+++ b/p1/interesting/comma/style.css
@@ -62,6 +62,9 @@ p{
   border: 4px solid;
   border-radius: 4vw;
   padding: 30px;
+  overflow: scroll;
+  height: 75vh;
+  scrollbar-color: red;
 }
 
 .red{
@@ -73,7 +76,6 @@ p{
   flex-direction: column;
   align-items: center;
   width: 95%;
-
 }
 
 #grid{
