--- a/p1/uninteresting/style.css
+++ b/p1/uninteresting/style.css
@@ -14,7 +14,6 @@ h2{
     display: flex;
     width: 56%;
     margin: auto;
-    
 }
 
 .box{
@@ -40,14 +39,21 @@ h3{
   flex-direction: row;
   gap: 15vw;
   justify-content: center;
+  opacity: 0;
+  animation: opacity 2s ease-in-out forwards;
+  animation-delay: 6s;
 }
 
-.interesting{
-  display: flex;
-  flex-direction: row;
-  gap: 15vw;
-  justify-content: center;
+@keyframes opacity {
+  from{
+    opacity: 0;
+  }
+
+  to{
+    opacity: 1;
+  }
 }
+
 
 .reveal{
   color: red
