--- a/p1/interesting/period/style.css
+++ b/p1/interesting/period/style.css
@@ -17,7 +17,7 @@ h1{
     color: black;
     line-height: 2px;
     text-align: center;
-    margin-top: 18vw;
+    margin-top: 5vw;
     margin-bottom: 20vw;
 }
 
@@ -40,23 +40,77 @@ h3{
     
 }
 
-.bar1{
-    width: 10px;
-    height: 10px;
-    background-color: red;
-  }
+.bar1 {
+    width: 250px; /* Adjust as needed */
+    height: 10px; /* Adjust as needed */
+    position: relative; /* Needed for absolute positioning */
+}
+
+.bar1 .fill {
+    position: absolute;
+    top: 0.26vh;
+    left: 0;
+    height: 100%;
+    background-color: red; /* Adjust as needed */
+    width: 10%; /* Adjust as needed */
+}
+
+.bar1 .border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 90%;
+    border: 3px solid red; /* Adjust border styles as needed */
+    width: 100%; /* Adjust as needed */
+}
   
 .bar2{
-    width: 140px;
+    width: 250px;
     height: 10px;
-    background-color: red;
+    position: relative;
  }
 
+ .bar2 .fill {
+    position: absolute;
+    top: 0.26vh;
+    left: 0;
+    height: 100%;
+    background-color: red; /* Adjust as needed */
+    width: 90%; /* Adjust as needed */
+}
+
+.bar2 .border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 90%;
+    border: 3px solid red; /* Adjust border styles as needed */
+    width: 100%; /* Adjust as needed */
+}
+
 .bar3{
-    width: 90px;
+    width: 250px;
     height: 10px;
-    background-color: red;
+    position: relative;
  }
+
+ .bar3 .fill {
+    position: absolute;
+    top: 0.27vh;
+    left: 0;
+    height: 100%;
+    background-color: red; /* Adjust as needed */
+    width: 60%; /* Adjust as needed */
+}
+
+.bar3 .border {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 90%;
+    border: 3px solid red; /* Adjust border styles as needed */
+    width: 100%; /* Adjust as needed */
+}
 
 p{
     border: 4px solid;
