--- a/p1/interesting/colons/style.css
+++ b/p1/interesting/colons/style.css
@@ -18,7 +18,7 @@ h1{
   line-height: 2px;
   text-align: center;
   margin-top: 10vw;
-  margin-bottom: 20vw;
+  margin-bottom: 16vw;
 }
 
 h2{
@@ -40,22 +40,76 @@ h3{
   
 }
 
-.bar1{
-  width: 30px;
-  height: 10px;
-  background-color: red;
+.bar1 {
+  width: 250px; /* Adjust as needed */
+  height: 10px; /* Adjust as needed */
+  position: relative; /* Needed for absolute positioning */
+}
+
+.bar1 .fill {
+  position: absolute;
+  top: 0.26vh;
+  left: 0;
+  height: 100%;
+  background-color: red; /* Adjust as needed */
+  width: 20%; /* Adjust as needed */
+}
+
+.bar1 .border {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 90%;
+  border: 3px solid red; /* Adjust border styles as needed */
+  width: 100%; /* Adjust as needed */
 }
 
 .bar2{
-  width: 80px;
+  width: 250px;
   height: 10px;
-  background-color: red;
+  position: relative;
+}
+
+.bar2 .fill {
+  position: absolute;
+  top: 0.26vh;
+  left: 0;
+  height: 100%;
+  background-color: red; /* Adjust as needed */
+  width: 50%; /* Adjust as needed */
+}
+
+.bar2 .border {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 90%;
+  border: 3px solid red; /* Adjust border styles as needed */
+  width: 100%; /* Adjust as needed */
 }
 
 .bar3{
-  width: 140px;
+  width: 250px;
   height: 10px;
-  background-color: red;
+  position: relative;
+}
+
+.bar3 .fill {
+  position: absolute;
+  top: 0.27vh;
+  left: 0;
+  height: 100%;
+  background-color: red; /* Adjust as needed */
+  width: 80%; /* Adjust as needed */
+}
+
+.bar3 .border {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 90%;
+  border: 3px solid red; /* Adjust border styles as needed */
+  width: 100%; /* Adjust as needed */
 }
 
 p{
