--- a/p1/uninteresting/style.css
+++ b/p1/uninteresting/style.css
@@ -2,6 +2,10 @@
     cursor: url(../image/period.png), auto;
   }
 
+body{
+  overflow: hidden;
+}
+
 h2{
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
@@ -31,6 +35,7 @@ h3{
     color: black;
     line-height: 1rem;
     text-align: center;
+    transition: all .2s ease-in-out; 
 }
 
 
@@ -41,7 +46,7 @@ h3{
   justify-content: center;
   opacity: 0;
   animation: opacity 2s ease-in-out forwards;
-  animation-delay: 3.2s;
+  animation-delay: 4.6s;
 }
 
 @keyframes opacity {
@@ -64,6 +69,35 @@ a:link{
 }
 
 h3:hover{
-    text-shadow: 0px 2px 300px red;
-  filter: dropshadow(color=red, offx=2, offy=2);
+  text-shadow: 0px 0px 200px red;
+  transform: scale(1.1); 
+  
 }
+
+button {
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 1.5em;
+  color: red;
+  border: none;
+  background: none;
+  cursor: pointer;
+  position: fixed;
+  z-index: 999;
+  bottom: 20px; /* Adjust the distance from the bottom */
+
+}
+
+.back{
+  left: 20px;
+}
+
+.skip{
+  right: 20px;
+}
+
+button:hover {
+  transform: scale(1.1); 
+}
+
