--- a/p1/interesting/style.css
+++ b/p1/interesting/style.css
@@ -1,63 +1,102 @@
 *{
-    cursor: url(../image/period.png), auto;
-  }
+  cursor: url(../image/period.png), auto;
+}
 
-  h2{
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-size: 1.5rem;
-    color: black;
-    border: 4px solid;
-    border-radius: 2vw;
-    padding: 15px;
-    display: flex;
-    width: 56%;
-    margin: auto;
+body{
+overflow: hidden;
+}
+
+h2{
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: black;
+  border: 4px solid;
+  border-radius: 2vw;
+  padding: 15px;
+  display: flex;
+  width: 56%;
+  margin: auto;
 }
 
 .box{
-  
-  margin-top: 10vw;
-  margin-bottom: -8vw;
+
+margin-top: 10vw;
+margin-bottom: -8vw;
 
 }
 
 h3{
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-size: 20vw;
-    color: black;
-    line-height: 1rem;
-    text-align: center;
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 20vw;
+  color: black;
+  line-height: 1rem;
+  text-align: center;
+  transition: all .2s ease-in-out; 
 }
 
+
 .interesting{
-  display: flex;
-  flex-direction: row;
-  gap: 15vw;
-  justify-content: center;
-  opacity: 0;
-  animation: opacity 2s ease-in-out forwards;
-  animation-delay: 9s;
+display: flex;
+flex-direction: row;
+gap: 15vw;
+justify-content: center;
+opacity: 0;
+animation: opacity 2s ease-in-out forwards;
+animation-delay: 4.6s;
 }
 
 @keyframes opacity {
-  from{
-    opacity: 0;
-  }
+from{
+  opacity: 0;
+}
 
-  to{
-    opacity: 1;
-  }
+to{
+  opacity: 1;
+}
+}
+
+
+.reveal{
+color: red
 }
 
 a:link{
-    text-decoration: none;
+  text-decoration: none;
 }
 
 h3:hover{
-    text-shadow: 0px 2px 300px red;
-  filter: dropshadow(color=red, offx=2, offy=2);
+text-shadow: 0px 0px 200px red;
+transform: scale(1.1); 
+
+}
+
+button {
+font-family: "Pixelify Sans", sans-serif;
+font-optical-sizing: auto;
+font-weight: 400;
+font-size: 1.5em;
+color: red;
+border: none;
+background: none;
+cursor: pointer;
+position: fixed;
+z-index: 999;
+bottom: 20px; /* Adjust the distance from the bottom */
+
+}
+
+.back{
+left: 20px;
+}
+
+.skip{
+right: 20px;
+}
+
+button:hover {
+transform: scale(1.1); 
 }
