--- a/p1/interesting/comma/style.css
+++ b/p1/interesting/comma/style.css
@@ -17,7 +17,7 @@ h1{
   color: black;
   line-height: 2px;
   text-align: center;
-  margin-top: 6.5vw;
+  margin-top: 6vw;
   margin-bottom: 20vw;
 }
 
@@ -30,7 +30,9 @@ h2{
 
 .stats{
   line-height: 3px;
-  margin-left: 12vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h3{
@@ -48,7 +50,7 @@ h3{
 
 .bar1 .fill {
   position: absolute;
-  top: 0.26vh;
+  top: 0.27vh;
   left: 0;
   height: 100%;
   background-color: red; /* Adjust as needed */
@@ -117,7 +119,7 @@ p{
   border-radius: 4vw;
   padding: 30px;
   overflow: scroll;
-  height: 75vh;
+  height: 79vh;
   scrollbar-color: red;
 }
 
