--- a/p1/interesting/period/style.css
+++ b/p1/interesting/period/style.css
@@ -18,7 +18,7 @@ h1{
     line-height: 2px;
     text-align: center;
     margin-top: 5vw;
-    margin-bottom: 20vw;
+    margin-bottom: 21vw;
 }
 
 h2{
@@ -30,7 +30,9 @@ h2{
 
 .stats{
     line-height: 3px;
-    margin-left: 12vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h3{
@@ -117,7 +119,7 @@ p{
     border-radius: 4vw;
     padding: 30px;
     overflow: scroll;
-    height: 75vh;
+    height: 79vh;
     scrollbar-color: red;
 }
 
