--- a/p1/uninteresting/exclamation/style.css
+++ b/p1/uninteresting/exclamation/style.css
@@ -13,12 +13,12 @@ h1{
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    font-size: 40vw;
+    font-size: 28vw;
     color: black;
     line-height: 2px;
     text-align: center;
-    margin-top: 18vw;
-    margin-bottom: 20vw;
+    margin-top: 13vw;
+    margin-bottom: 13vw;
     animation: bounce 1.8s infinite; 
 }
 
@@ -56,7 +56,9 @@ h2{
 
 .stats{
     line-height: 3px;
-    margin-left: 12vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h3{
@@ -142,6 +144,8 @@ p{
     border: 4px solid;
     border-radius: 4vw;
     padding: 30px;
+    height: 79vh;
+    overflow: scroll;
 }
 
 .red{
