--- a/p1/uninteresting/apostrophe/style.css
+++ b/p1/uninteresting/apostrophe/style.css
@@ -18,7 +18,22 @@ h1{
   line-height: 2px;
   text-align: center;
   margin-top: 18vw;
-  margin-bottom: 10vw;
+  margin-bottom: 8vw;
+  animation: gentle 7s ease-in infinite;
+}
+
+@keyframes gentle {
+
+  0% {
+    opacity: 1;
+}
+50% {
+    opacity: 0;
+}
+100% {
+    opacity: 1;
+}
+  
 }
 
 h2{
@@ -30,7 +45,9 @@ h2{
 
 .stats{
   line-height: 3px;
-  margin-left: 12vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centers horizontally */
 }
 
 h3{
@@ -116,6 +133,8 @@ p{
   border: 4px solid;
   border-radius: 4vw;
   padding: 30px;
+  height: 79vh;
+  overflow: scroll;
 }
 
 .red{
