--- a/p1/interesting/period/style.css
+++ b/p1/interesting/period/style.css
@@ -19,6 +19,16 @@ h1{
     text-align: center;
     margin-top: 5vw;
     margin-bottom: 21vw;
+    animation: crazy 10s infinite;
+}
+
+@keyframes crazy {
+0%, 20%{ transform: translate(1px, 1px) rotate(0deg); }
+
+40%, 80% { transform: translate(48vw, 0px) scale(2)}
+
+100% { transform: translate(1px, 1px) rotate(0deg);
+}
 }
 
 h2{
