--- a/p1/interesting/comma/style.css
+++ b/p1/interesting/comma/style.css
@@ -19,6 +19,17 @@ h1{
   text-align: center;
   margin-top: 6vw;
   margin-bottom: 20vw;
+  animation: bow 2s infinite alternate ease-in-out;
+  transform-origin: bottom center;
+}
+
+@keyframes bow{
+  0% {
+    transform: rotateZ(0deg);
+}
+100% {
+    transform: rotateZ(-20deg);
+}
 }
 
 h2{
@@ -149,4 +160,35 @@ button{
   border: none;
   background: none;
   cursor: pointer;
+}
+
+@media (max-width: 768px){
+  
+  h1{
+      font-size: 20rem;
+      color: black;
+      line-height: 2px;
+      text-align: center;
+      margin-top: 28vw;
+      margin-bottom: 28vw;
+  }
+
+  .stats{
+      margin-bottom: 10vw;
+  }
+
+  #grid{
+      display: grid;
+      grid-template-columns: 1fr;
+      
+  }
+
+  p{
+      border: 4px solid;
+      border-radius: 4vw;
+      padding: 30px;
+      overflow: auto;
+      height: auto;
+  }
+
 }
