--- a/p1/interesting/style.css
+++ b/p1/interesting/style.css
@@ -100,3 +100,37 @@ right: 20px;
 button:hover {
 transform: scale(1.1); 
 }
+
+@media (max-width: 768px){
+  body{
+    overflow: auto;
+  }
+
+  h2{
+    font-family: "Pixelify Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-size: 1.5rem;
+    color: black;
+    border: 4px solid;
+    border-radius: 2vw;
+    padding: 15px;
+    display: flex;
+    width: 90%;
+}
+
+h3{
+  font-size: 20rem;
+  color: black;
+  line-height: 0.5rem;
+}
+
+  .interesting{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    text-shadow: 0px 0px 100px red, 0px 0px 100px red;
+
+}
+}
