--- a/p1/style.css
+++ b/p1/style.css
@@ -105,4 +105,23 @@ button {
     transform: scale(1.1); 
   }
 
+  @media (max-width: 768px){
+    
+    #box {
+        width: 60vw;
+        height: 14vw;
+        border: 5px solid;
+        border-radius: 5vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        animation: shake 0.5s;
+        animation-iteration-count: infinite;
+        box-shadow: 0px 2px 300px red;
+    }
+
+
+  }
+
 
