--- a/p1/uninteresting/style.css
+++ b/p1/uninteresting/style.css
@@ -101,3 +101,38 @@ button:hover {
   transform: scale(1.1); 
 }
 
+/* Media query for mobile screens */
+body{
+  overflow: auto;
+}
+
+@media (max-width: 768px){
+  h2{
+    font-family: "Pixelify Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-size: 1.5rem;
+    color: black;
+    border: 4px solid;
+    border-radius: 2vw;
+    padding: 15px;
+    display: flex;
+    width: 90%;
+}
+
+h3{
+  font-size: 20rem;
+  color: black;
+  line-height: 0.5rem;
+}
+
+  .uninteresting{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    text-shadow: 0px 0px 100px red, 0px 0px 100px red;
+
+}
+}
+
