--- a/p1/interesting/period/style.css
+++ b/p1/interesting/period/style.css
@@ -1,15 +1,16 @@
-*{
+* {
     cursor: url(../../image/period.png), auto;
-  }
+}
 
-body{
+body {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-size: 1.5rem;
+    overflow: hidden;
 }
 
-h1{
+h1 {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -23,39 +24,50 @@ h1{
 }
 
 @keyframes crazy {
-0%, 10%{ transform: translate(1px, 1px) rotate(0deg); }
 
-25%, 80% { transform: translate(48vw, 0px) scale(2)}
+    0%,
+    10% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
 
-100% { transform: translate(1px, 1px) rotate(0deg);
+    25%,
+    80% {
+        transform: translate(48vw, 0px) scale(2);
+    }
+
+    100% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
 }
-}
 
-h2{
+h2 {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     text-align: center;
 }
 
-.stats{
+.stats {
     line-height: 3px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-h3{
+h3 {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    
+
 }
 
 .bar1 {
-    width: 250px; /* Adjust as needed */
-    height: 10px; /* Adjust as needed */
-    position: relative; /* Needed for absolute positioning */
+    width: 250px;
+    /* Adjust as needed */
+    height: 10px;
+    /* Adjust as needed */
+    position: relative;
+    /* Needed for absolute positioning */
 }
 
 .bar1 .fill {
@@ -63,8 +75,10 @@ h3{
     top: 0.26vh;
     left: 0;
     height: 100%;
-    background-color: red; /* Adjust as needed */
-    width: 10%; /* Adjust as needed */
+    background-color: red;
+    /* Adjust as needed */
+    width: 10%;
+    /* Adjust as needed */
 }
 
 .bar1 .border {
@@ -72,23 +86,27 @@ h3{
     top: 0;
     left: 0;
     height: 90%;
-    border: 3px solid red; /* Adjust border styles as needed */
-    width: 100%; /* Adjust as needed */
+    border: 3px solid red;
+    /* Adjust border styles as needed */
+    width: 100%;
+    /* Adjust as needed */
 }
-  
-.bar2{
+
+.bar2 {
     width: 250px;
     height: 10px;
     position: relative;
- }
+}
 
- .bar2 .fill {
+.bar2 .fill {
     position: absolute;
     top: 0.26vh;
     left: 0;
     height: 100%;
-    background-color: red; /* Adjust as needed */
-    width: 90%; /* Adjust as needed */
+    background-color: red;
+    /* Adjust as needed */
+    width: 90%;
+    /* Adjust as needed */
 }
 
 .bar2 .border {
@@ -96,23 +114,27 @@ h3{
     top: 0;
     left: 0;
     height: 90%;
-    border: 3px solid red; /* Adjust border styles as needed */
-    width: 100%; /* Adjust as needed */
+    border: 3px solid red;
+    /* Adjust border styles as needed */
+    width: 100%;
+    /* Adjust as needed */
 }
 
-.bar3{
+.bar3 {
     width: 250px;
     height: 10px;
     position: relative;
- }
+}
 
- .bar3 .fill {
+.bar3 .fill {
     position: absolute;
     top: 0.27vh;
     left: 0;
     height: 100%;
-    background-color: red; /* Adjust as needed */
-    width: 60%; /* Adjust as needed */
+    background-color: red;
+    /* Adjust as needed */
+    width: 60%;
+    /* Adjust as needed */
 }
 
 .bar3 .border {
@@ -120,40 +142,42 @@ h3{
     top: 0;
     left: 0;
     height: 90%;
-    border: 3px solid red; /* Adjust border styles as needed */
-    width: 100%; /* Adjust as needed */
+    border: 3px solid red;
+    /* Adjust border styles as needed */
+    width: 100%;
+    /* Adjust as needed */
 }
 
-p{
+p {
     border: 4px solid;
     border-radius: 4vw;
     padding: 30px;
-    overflow: scroll;
+    overflow: auto;
+    overflow-x: none;
     height: 79vh;
-    scrollbar-color: red;
 
 }
 
 
-.stop{
+.stop {
     color: red;
     font-size: 17vw;
 }
 
-.box{
+.box {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 95%;
 }
 
-#grid{
+#grid {
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    
+
 }
 
-button{
+button {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -164,33 +188,55 @@ button{
     cursor: pointer;
 }
 
-@media (max-width: 768px){
-  
-    h1{
+@media (max-width: 768px) {
+
+    body {
+        overflow: auto;
+    }
+
+    h1 {
         font-size: 20rem;
         color: black;
         line-height: 2px;
         text-align: center;
         margin-top: 28vw;
         margin-bottom: 28vw;
+        animation: crazy 10s infinite;
     }
 
-    .stats{
+    @keyframes crazy {
+
+        0% {
+            transform: translate(0px, 0px);
+        }
+
+        25%,
+        80% {
+            transform: translate(1px, 180vw);
+            scale: 2;
+        }
+
+        100% {
+            transform: translate(0px, 0px);
+        }
+    }
+
+    .stats {
         margin-bottom: 10vw;
     }
 
-    #grid{
+    #grid {
         display: grid;
         grid-template-columns: 1fr;
-        
+
     }
 
-    p{
+    p {
         border: 4px solid;
         border-radius: 4vw;
         padding: 30px;
         overflow: auto;
         height: auto;
     }
-  
-  }
+
+}
