--- a/p1/uninteresting/apostrophe/style.css
+++ b/p1/uninteresting/apostrophe/style.css
@@ -1,15 +1,16 @@
-*{
+* {
   cursor: url(../../image/period.png), auto;
 }
 
-body{
+body {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-size: 1.5rem;
+  overflow: hidden;
 }
 
-h1{
+h1 {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -26,41 +27,43 @@ h1{
 
   0% {
     opacity: 1;
-}
-50% {
+  }
+
+  50% {
     opacity: 0;
-}
-100% {
+  }
+
+  100% {
     opacity: 1;
-}
-  
+  }
+
 }
 
-h2{
+h2 {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   text-align: center;
 }
 
-.stats{
+.stats {
   line-height: 3px;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centers horizontally */
+  align-items: center;
 }
 
-h3{
+h3 {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
-  
+
 }
 
 .bar1 {
-  width: 250px; /* Adjust as needed */
-  height: 10px; /* Adjust as needed */
-  position: relative; /* Needed for absolute positioning */
+  width: 250px;
+  height: 10px;
+  position: relative;
 }
 
 .bar1 .fill {
@@ -68,8 +71,8 @@ h3{
   top: 0.26vh;
   left: 0;
   height: 100%;
-  background-color: red; /* Adjust as needed */
-  width: 30%; /* Adjust as needed */
+  background-color: red;
+  width: 30%;
 }
 
 .bar1 .border {
@@ -77,11 +80,11 @@ h3{
   top: 0;
   left: 0;
   height: 90%;
-  border: 3px solid red; /* Adjust border styles as needed */
-  width: 100%; /* Adjust as needed */
+  border: 3px solid red;
+  width: 100%;
 }
 
-.bar2{
+.bar2 {
   width: 250px;
   height: 10px;
   position: relative;
@@ -92,8 +95,10 @@ h3{
   top: 0.26vh;
   left: 0;
   height: 100%;
-  background-color: red; /* Adjust as needed */
-  width: 30%; /* Adjust as needed */
+  background-color: red;
+  /* Adjust as needed */
+  width: 30%;
+  /* Adjust as needed */
 }
 
 .bar2 .border {
@@ -101,11 +106,13 @@ h3{
   top: 0;
   left: 0;
   height: 90%;
-  border: 3px solid red; /* Adjust border styles as needed */
-  width: 100%; /* Adjust as needed */
+  border: 3px solid red;
+  /* Adjust border styles as needed */
+  width: 100%;
+  /* Adjust as needed */
 }
 
-.bar3{
+.bar3 {
   width: 250px;
   height: 10px;
   position: relative;
@@ -116,8 +123,8 @@ h3{
   top: 0.27vh;
   left: 0;
   height: 100%;
-  background-color: red; /* Adjust as needed */
-  width: 30%; /* Adjust as needed */
+  background-color: red;
+  width: 30%;
 }
 
 .bar3 .border {
@@ -125,23 +132,23 @@ h3{
   top: 0;
   left: 0;
   height: 90%;
-  border: 3px solid red; /* Adjust border styles as needed */
-  width: 100%; /* Adjust as needed */
+  border: 3px solid red;
+  width: 100%;
 }
 
-p{
+p {
   border: 4px solid;
   border-radius: 4vw;
   padding: 30px;
   height: 79vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
-.red{
+.red {
   color: red;
 }
 
-.box{
+.box {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -149,13 +156,13 @@ p{
 
 }
 
-#grid{
+#grid {
   display: grid;
   grid-template-columns: repeat(2, 50%);
-  
+
 }
 
-button{
+button {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -166,33 +173,36 @@ button{
   cursor: pointer;
 }
 
-@media (max-width: 768px){
-  
-  h1{
-      font-size: 20rem;
-      color: black;
-      line-height: 2px;
-      text-align: center;
-      margin-top: 28vw;
-      margin-bottom: 28vw;
-      animation: flip 2s infinite alternate;
+@media (max-width: 768px) {
+
+  body {
+    overflow: auto;
   }
 
-  .stats{
-      margin-bottom: 10vw;
+  h1 {
+    font-size: 20rem;
+    color: black;
+    line-height: 2px;
+    text-align: center;
+    margin-top: 28vw;
+    margin-bottom: 28vw;
   }
 
-  #grid{
-      display: grid;
-      grid-template-columns: 1fr;
-      
+  .stats {
+    margin-bottom: 10vw;
   }
 
-  p{
-      border: 4px solid;
-      border-radius: 4vw;
-      overflow: auto;
-      height: auto;
+  #grid {
+    display: grid;
+    grid-template-columns: 1fr;
+
+  }
+
+  p {
+    border: 4px solid;
+    border-radius: 4vw;
+    overflow: auto;
+    height: auto;
   }
 
 }
