--- a/p1/style.css
+++ b/p1/style.css
@@ -1,13 +1,14 @@
-body{
+body {
     cursor: url(./image/period.png), auto;
-  }
+    overflow: hidden;
+}
 
 
 #wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh; 
+    height: 90vh;
 }
 
 #box {
@@ -21,7 +22,7 @@ body{
     color: black;
 }
 
-#box:hover{
+#box:hover {
     cursor: url(./image/comma.png), auto;
     box-shadow: 0px 2px 300px red;
     animation: shake 0.5s;
@@ -29,18 +30,50 @@ body{
 }
 
 @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
 
 h1 {
     font-family: "Pixelify Sans", sans-serif;
@@ -51,29 +84,37 @@ h1 {
     color: black;
 }
 
-#h1:hover{
+#h1:hover {
     color: red;
 }
 
-a:link{
+a:link {
     text-decoration: none;
 }
 
-.blink{
-	animation: blinking 1s linear infinite;
+.blink {
+    animation: blinking 1s linear infinite;
 }
 
-@keyframes blinking{
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { opacity: 0; }
+@keyframes blinking {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
 
 /* #menu{
     text-align: center;
 } */
 
-h2{
+h2 {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -91,22 +132,22 @@ button {
     border: none;
     background: none;
     cursor: pointer;
-    
-  }
 
-  .back{
+}
+
+.back {
     margin: auto;
     display: flex;
     justify-content: center;
-  }
-  
-  
-  button:hover {
-    transform: scale(1.1); 
-  }
+}
 
-  @media (max-width: 768px){
-    
+
+button:hover {
+    transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+
     #box {
         width: 60vw;
         height: 14vw;
@@ -122,6 +163,4 @@ button {
     }
 
 
-  }
-
-
+}
