--- a/p1/uninteresting/question/style.css
+++ b/p1/uninteresting/question/style.css
@@ -1,15 +1,16 @@
-*{
+* {
     cursor: url(../../image/period.png), auto;
-  }
+}
 
-body{
+body {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-size: 1.5rem;
+    overflow: hidden;
 }
 
-h1{
+h1 {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -26,6 +27,7 @@ h1{
     0% {
         transform: rotateY(180deg);
     }
+
     50% {
         transform: rotateY(0deg);
     }
@@ -33,37 +35,40 @@ h1{
     70% {
         transform: rotateY(0deg);
     }
-    
+
     100% {
         transform: rotateY(0deg);
     }
 }
 
-h2{
+h2 {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     text-align: center;
 }
 
-.stats{
+.stats {
     line-height: 3px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-h3{
+h3 {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    
+
 }
 
 .bar1 {
-    width: 250px; /* Adjust as needed */
-    height: 10px; /* Adjust as needed */
-    position: relative; /* Needed for absolute positioning */
+    width: 250px;
+    /* Adjust as needed */
+    height: 10px;
+    /* Adjust as needed */
+    position: relative;
+    /* Needed for absolute positioning */
 }
 
 .bar1 .fill {
@@ -71,8 +76,10 @@ h3{
     top: 0.26vh;
     left: 0;
     height: 100%;
-    background-color: red; /* Adjust as needed */
-    width: 60%; /* Adjust as needed */
+    background-color: red;
+    /* Adjust as needed */
+    width: 60%;
+    /* Adjust as needed */
 }
 
 .bar1 .border {
@@ -80,23 +87,27 @@ h3{
     top: 0;
     left: 0;
     height: 90%;
-    border: 3px solid red; /* Adjust border styles as needed */
-    width: 100%; /* Adjust as needed */
+    border: 3px solid red;
+    /* Adjust border styles as needed */
+    width: 100%;
+    /* Adjust as needed */
 }
-  
-.bar2{
+
+.bar2 {
     width: 250px;
     height: 10px;
     position: relative;
- }
+}
 
- .bar2 .fill {
+.bar2 .fill {
     position: absolute;
     top: 0.26vh;
     left: 0;
     height: 100%;
-    background-color: red; /* Adjust as needed */
-    width: 20%; /* Adjust as needed */
+    background-color: red;
+    /* Adjust as needed */
+    width: 20%;
+    /* Adjust as needed */
 }
 
 .bar2 .border {
@@ -104,23 +115,27 @@ h3{
     top: 0;
     left: 0;
     height: 90%;
-    border: 3px solid red; /* Adjust border styles as needed */
-    width: 100%; /* Adjust as needed */
+    border: 3px solid red;
+    /* Adjust border styles as needed */
+    width: 100%;
+    /* Adjust as needed */
 }
 
-.bar3{
+.bar3 {
     width: 250px;
     height: 10px;
     position: relative;
- }
+}
 
- .bar3 .fill {
+.bar3 .fill {
     position: absolute;
     top: 0.27vh;
     left: 0;
     height: 100%;
-    background-color: red; /* Adjust as needed */
-    width: 30%; /* Adjust as needed */
+    background-color: red;
+    /* Adjust as needed */
+    width: 30%;
+    /* Adjust as needed */
 }
 
 .bar3 .border {
@@ -128,36 +143,39 @@ h3{
     top: 0;
     left: 0;
     height: 90%;
-    border: 3px solid red; /* Adjust border styles as needed */
-    width: 100%; /* Adjust as needed */
+    border: 3px solid red;
+    /* Adjust border styles as needed */
+    width: 100%;
+    /* Adjust as needed */
 }
 
-p{
+p {
     border: 4px solid;
     border-radius: 4vw;
     padding: 30px;
-    overflow: scroll;
+    overflow: auto;
+    overflow-x: none;
     height: 79vh;
 }
 
-.red{
+.red {
     color: red;
 }
 
-.box{
+.box {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 95%;
 }
 
-#grid{
+#grid {
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    
+
 }
 
-button{
+button {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -168,9 +186,13 @@ button{
     cursor: pointer;
 }
 
-@media (max-width: 768px){
-  
-    h1{
+@media (max-width: 768px) {
+
+    body {
+        overflow: auto;
+    }
+
+    h1 {
         font-size: 20rem;
         color: black;
         line-height: 2px;
@@ -180,25 +202,22 @@ button{
         animation: flip 2s infinite alternate;
     }
 
-    .stats{
+    .stats {
         margin-bottom: 10vw;
     }
 
-    #grid{
+    #grid {
         display: grid;
         grid-template-columns: 1fr;
-        
+
     }
 
-    p{
+    p {
         border: 4px solid;
         border-radius: 4vw;
         padding: 30px;
         overflow: auto;
         height: auto;
     }
-  
-  }
 
-
-
+}
