--- a/p1/uninteresting/style.css
+++ b/p1/uninteresting/style.css
@@ -1,45 +1,46 @@
-*{
-    cursor: url(../image/period.png), auto;
-  }
+* {
+  cursor: url(../image/period.png), auto;
+  overflow: none;
+}
 
-body{
+body {
   overflow: hidden;
 }
 
-h2{
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-size: 1.5rem;
-    color: black;
-    border: 4px solid;
-    border-radius: 2vw;
-    padding: 15px;
-    display: flex;
-    width: 56%;
-    margin: auto;
+h2 {
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: black;
+  border: 4px solid;
+  border-radius: 2vw;
+  padding: 15px;
+  display: flex;
+  width: 56%;
+  margin: auto;
 }
 
-.box{
-  
+.box {
+
   margin-top: 10vw;
   margin-bottom: -8vw;
 
 }
 
-h3{
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-size: 20vw;
-    color: black;
-    line-height: 1rem;
-    text-align: center;
-    transition: all .2s ease-in-out; 
+h3 {
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 20vw;
+  color: black;
+  line-height: 1rem;
+  text-align: center;
+  transition: all .2s ease-in-out;
 }
 
 
-.uninteresting{
+.uninteresting {
   display: flex;
   flex-direction: row;
   gap: 15vw;
@@ -50,28 +51,28 @@ h3{
 }
 
 @keyframes opacity {
-  from{
+  from {
     opacity: 0;
   }
 
-  to{
+  to {
     opacity: 1;
   }
 }
 
 
-.reveal{
+.reveal {
   color: red
 }
 
-a:link{
-    text-decoration: none;
+a:link {
+  text-decoration: none;
 }
 
-h3:hover{
+h3:hover {
   text-shadow: 0px 0px 200px red;
-  transform: scale(1.1); 
-  
+  transform: scale(1.1);
+
 }
 
 button {
@@ -85,29 +86,30 @@ button {
   cursor: pointer;
   position: fixed;
   z-index: 999;
-  bottom: 20px; /* Adjust the distance from the bottom */
+  bottom: 20px;
+  /* Adjust the distance from the bottom */
 
 }
 
-.back{
+.back {
   left: 20px;
 }
 
-.skip{
+.skip {
   right: 20px;
 }
 
 button:hover {
-  transform: scale(1.1); 
+  transform: scale(1.1);
 }
 
 /* Media query for mobile screens */
-body{
+body {
   overflow: auto;
 }
 
-@media (max-width: 768px){
-  h2{
+@media (max-width: 768px) {
+  h2 {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -118,21 +120,20 @@ body{
     padding: 15px;
     display: flex;
     width: 90%;
-}
+  }
 
-h3{
-  font-size: 20rem;
-  color: black;
-  line-height: 0.5rem;
-}
+  h3 {
+    font-size: 20rem;
+    color: black;
+    line-height: 0.5rem;
+  }
 
-  .uninteresting{
+  .uninteresting {
     display: flex;
     flex-direction: column;
     justify-content: center;
     opacity: 0;
     text-shadow: 0px 0px 100px red, 0px 0px 100px red;
 
+  }
 }
-}
-
