--- a/p2/style.css
+++ b/p2/style.css
@@ -20,12 +20,26 @@ h1 {
     margin-bottom: 2rem;
 }
 
+h2 {
+    font-family: inter;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    margin: 1.1rem;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
 h3 {
     font-family: inter;
     font-optical-sizing: auto;
     font-weight: 200;
     font-style: normal;
     padding-left: 1rem;
+}
+
+#introduction {
+    height: 100vh;
 }
 
 #controls {
@@ -74,4 +88,27 @@ h3 {
     max-width: 150px;
     max-height: 150px;
     margin-bottom: 1rem;
+}
+
+button {
+    font-family: "Inria Serif", serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 20px;
+    margin: 1.5rem;
+    background-color: #FFFAEF;
+    border: none;
+    display: block;
+    margin: auto;
+    text-decoration: none;
+    margin-bottom: 1rem;
+}
+
+button:hover {
+    color: #802f1d;
+    font-style: italic;
+}
+
+a {
+    text-decoration: none;
 }
